# stickers-utils

./: .flake8  .gitignore  pyproject.toml
src/: main.py  settings.py
src/commands/: add_borders.py  download_stickerset.py  upload_stickerset.py
src/utils/: filesystem.py  telegram.py  transformations.py
tests/: main.py
